add Token record; add authorities, roles, permissions